--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,24 +1,34 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.wunderman.meuford.LoginActivity" >
-
-    <FrameLayout
-        android:id="@+id/login_frame_layout" 
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:background="@drawable/bg_geral_footer"
-	    tools:context="com.wunderman.meuford.SplashActivity" >
-	
-		<!-- Login progress -->
-
-	    <LinearLayout
-	        android:id="@+id/login_status"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:gravity="center_horizontal"
-	        android:orientation="vertical"
-	        android:visibility="gone" >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ActivityLogin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        
+    <fragment
+        android:id="@+id/fragmentTitleMeuFord"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        class="com.wunderman.meuford.fragments.FragmentTitleMeuFord" />
+    
+    <fragment
+        android:id="@+id/fragmentBottomMeuFord"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        class="com.wunderman.meuford.fragments.FragmentBottomBarLogo" />
+    
+    <!-- Login progress -->
+	<LinearLayout
+	    android:id="@+id/login_status"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
+	    android:gravity="center_horizontal"
+	    android:orientation="vertical"
+	    android:visibility="gone" >
 	
 	        <ProgressBar
 	            style="?android:attr/progressBarStyleLarge"
@@ -35,50 +45,114 @@
 	            android:text="@string/login_progress_signing_in"
 	            android:textAppearance="?android:attr/textAppearanceMedium" />
 	    </LinearLayout>
-	
-	    <!-- Login form -->
-	
-	    <ScrollView
-	        android:id="@+id/login_form"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent" >
-	
-	        <LinearLayout
-	            style="@style/LoginFormContainer"
-	            android:orientation="vertical" >
-	
-	            <EditText
-	                android:id="@+id/email"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:hint="@string/prompt_email"
-	                android:inputType="textEmailAddress"
-	                android:maxLines="1"
-	                android:singleLine="true" />
-	
-	            <EditText
-	                android:id="@+id/password"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:hint="@string/prompt_password"
-	                android:imeActionId="@+id/login"
-	                android:imeActionLabel="@string/action_sign_in_short"
-	                android:imeOptions="actionUnspecified"
-	                android:inputType="textPassword"
-	                android:maxLines="1"
-	                android:singleLine="true" />
-	
-	            <Button
-	                android:id="@+id/sign_in_button"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="right"
-	                android:layout_marginTop="16dp"
-	                android:paddingLeft="32dp"
-	                android:paddingRight="32dp"
-	                android:text="@string/action_sign_in_register" />
-	        </LinearLayout>
-	    </ScrollView>
-	</FrameLayout>
+    
+    <!-- Login Form -->
+    <ScrollView
+        android:id="@+id/loginForm"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/fragmentTitleMeuFord"
+        android:layout_above="@id/fragmentBottomMeuFord"
+        android:background="@drawable/bg_geral">
+        
+        <LinearLayout
+            android:id="@+id/loginFormContainer"
+	        android:orientation="vertical"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginTop="20dp"
+	        android:layout_marginRight="10dp"
+        	android:layout_marginLeft="10dp"
+        	android:layout_marginBottom="20dp">
+	        
+            <TextView
+            	android:id="@+id/txtTitleForm"
+	        	android:text="@string/text_title_form_login"
+	        	android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"
+	        	style="@style/TextFormLogin"
+	        	android:layout_gravity="top|center_horizontal" />
+        
+	        <EditText
+	            android:id="@+id/email"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="center_vertical|center_horizontal"
+		        android:hint="@string/prompt_email"
+		        android:inputType="textEmailAddress"
+		        android:maxLines="1"
+		        android:singleLine="true"
+		        android:layout_marginTop="15dp" />
+	        
+	        <EditText
+	            android:id="@+id/password"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical|center_horizontal"
+	            android:hint="@string/prompt_password"
+	            android:imeActionId="@+id/login"
+	            android:imeActionLabel="@string/action_sign_in_short"
+	            android:imeOptions="actionUnspecified"
+	            android:inputType="textPassword"
+	            android:maxLines="1"
+	            android:singleLine="true" />
+	        
+	        <Button
+				android:id="@+id/sign_in_button"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical|center_horizontal"
+	            style="@style/BtnFormLogin"
+	            android:layout_marginTop="16dp"
+	            android:text="@string/action_sign_in_register" />
+	        
+	        <ImageView
+	            android:id="@+id/forgotPassword"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical|center_horizontal"
+	            android:layout_marginTop="5dp"
+	            android:src="@drawable/esqueci_minha_senha"
+	            android:contentDescription="@string/description_forgot_password" />
+	        
+	        <ImageView
+	            android:id="@+id/imgDivider"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical|center_horizontal"
+	            android:layout_marginTop="20dp"
+	            android:layout_marginBottom="20dp"
+	            android:src="@drawable/divider"
+	            android:contentDescription="@string/description_divider" />
+	        
+	        <TextView
+	            android:id="@+id/questionRegister"
+	            android:text="@string/question_register"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_horizontal|center_vertical"
+	            style="@style/TextFormLogin" />
+	            
+            <TextView
+                android:id="@+id/textRegister"
+                android:text="@string/text_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                style="@style/TextFormLogin" />
+	            
+            <Button
+    	        android:id="@+id/btnRegister"
+                android:text="@string/action_register"
+                android:layout_width="wrap_content"
+       	        android:layout_height="wrap_content"
+   	            android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="16dp"
+                style="@style/BtnFormLogin" />
+            
+	    </LinearLayout>
 
-</merge>
+	</ScrollView>
+        
+</RelativeLayout>
