--- a/res/layout/activity_forgot_password.xml
+++ b/res/layout/activity_forgot_password.xml
@@ -43,16 +43,51 @@
         	
             <TextView
             	android:id="@+id/txtTitleForm"
-	        	android:text="@string/text_title_form_forgot_password"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
-	        	style="@style/TextFormLogin"
-	        	android:layout_gravity="top|center_horizontal" />
-           
+	        	android:layout_gravity="top|center_horizontal"
+	        	android:text="@string/text_title_activity_forgot_password"
+	        	style="@style/TextBlockWhite" />
+            
+            <TextView
+                android:id="@+id/txtBlock1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_block_1_activity_forgot_password"
+                style="@style/TextBlockForgotPasswordActivity" />
+            
+            <EditText
+	            android:id="@+id/inputEmail"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:maxLines="1"
+		        android:singleLine="true"
+		        android:hint="@string/prompt_email"
+		        android:inputType="textEmailAddress"
+		        style="@style/Input" />
+            
+            <Button
+    	        android:id="@+id/btnSend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+   	            android:text="@string/text_button_send"
+                style="@style/ButtonCenter" />
+            
+            <ImageView
+	            android:id="@+id/imgDivider"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            style="@style/Divider" />
+            
+            <TextView
+                android:id="@+id/txtBlock2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_block_2_activity_forgot_password"
+                style="@style/TextBlockForgotPasswordActivity" />
+
         </LinearLayout>
-	
+
 	</ScrollView>
-    
-    
     
 </RelativeLayout>
