--- a/res/values/strings_activity_forgot_password.xml
+++ b/res/values/strings_activity_forgot_password.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_title_form_forgot_password">Não se lembra da senha ?</string>
+    <string name="title_screen_activity_forgot_password">Esqueci Minha Senha</string>
+    <string name="text_title_activity_forgot_password"><b>Não se lembra da senha ?</b></string>
+    <string name="text_block_1_activity_forgot_password">Preencha abaixo seu endereço de e-mail cadastrado na Ford.com. Enviaremos as instruções para recuperação da sua senha.</string>
+    <string name="text_block_2_activity_forgot_password">É o seu primeiro acesso ao Meu Ford?\n<a href="#">Faça seu cadastro</a>. É rápido e fácil!</string>
 </resources>
