--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
 	    android:layout_gravity="center"
 	    android:gravity="center_horizontal"
 	    android:orientation="vertical"
-	    android:visibility="gone" >
+	    android:visibility="gone">
 	
 	        <ProgressBar
 	            style="?android:attr/progressBarStyleLarge"
@@ -68,44 +68,38 @@
 	        
             <TextView
             	android:id="@+id/txtTitleForm"
-	        	android:text="@string/text_title_form_login"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
-	        	style="@style/TextFormLogin"
-	        	android:layout_gravity="top|center_horizontal" />
+	        	android:text="@string/text_title_login_activity"
+	        	style="@style/TextBlockWhite" />
         
 	        <EditText
 	            android:id="@+id/email"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
-		        android:layout_gravity="center_vertical|center_horizontal"
-		        android:hint="@string/prompt_email"
-		        android:inputType="textEmailAddress"
 		        android:maxLines="1"
 		        android:singleLine="true"
-		        android:layout_marginTop="15dp" />
+		        android:hint="@string/prompt_email"
+		        android:inputType="textEmailAddress" />
 	        
 	        <EditText
 	            android:id="@+id/password"
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_vertical|center_horizontal"
+	            android:maxLines="1"
+	            android:singleLine="true"
 	            android:hint="@string/prompt_password"
 	            android:imeActionId="@+id/login"
-	            android:imeActionLabel="@string/action_sign_in_short"
+	            android:imeActionLabel="@string/text_button_sign_in"
 	            android:imeOptions="actionUnspecified"
-	            android:inputType="textPassword"
-	            android:maxLines="1"
-	            android:singleLine="true" />
+	            android:inputType="textPassword" />
 	        
 	        <Button
 				android:id="@+id/sign_in_button"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_vertical|center_horizontal"
-	            style="@style/BtnFormLogin"
-	            android:layout_marginTop="16dp"
-	            android:text="@string/action_sign_in_register" />
+	            android:text="@string/text_button_sign_in"
+	            style="@style/ButtonCenter" />
 	        
 	        <ImageView
 	            android:id="@+id/forgotPassword"
@@ -115,41 +109,27 @@
 	            android:layout_marginTop="5dp"
 	            android:src="@drawable/esqueci_minha_senha"
 	            android:contentDescription="@string/description_forgot_password" />
-	        
+	               
 	        <ImageView
 	            android:id="@+id/imgDivider"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_vertical|center_horizontal"
-	            android:layout_marginTop="20dp"
-	            android:layout_marginBottom="20dp"
-	            android:src="@drawable/divider"
-	            android:contentDescription="@string/description_divider" />
+	            style="@style/Divider" />
 	        
 	        <TextView
 	            android:id="@+id/questionRegister"
-	            android:text="@string/question_register"
+	            android:text="@string/text_register_login_activity"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="center_horizontal|center_vertical"
-	            style="@style/TextFormLogin" />
-	            
-            <TextView
-                android:id="@+id/textRegister"
-                android:text="@string/text_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                style="@style/TextFormLogin" />
-	            
+	            style="@style/TextBlockWhite" />
+            
             <Button
-    	        android:id="@+id/btnRegister"
-                android:text="@string/action_register"
-                android:layout_width="wrap_content"
-       	        android:layout_height="wrap_content"
-   	            android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_marginTop="16dp"
-                style="@style/BtnFormLogin" />
+				android:id="@+id/btnRegister"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/text_button_register"
+	            style="@style/ButtonCenter" />
             
 	    </LinearLayout>
 
