--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Validar se estão sendo utilizadas -->
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -25,15 +26,18 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <!--
     <style name="TextFormLogin">
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
-    
+    -->
+    <!--
     <style name="BtnFormLogin">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/bg_btn</item>
     </style>
+    -->
        
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
@@ -51,5 +55,82 @@
     </style>
 
     <style name="ButtonBarButton" />
+    <!-- Validar se estão sendo utilizadas -->
+    
+    
+    
+    
+    <!-- Novos Styles -->
+    <style name="TitleActionBar">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    
+    <style name="TextBlockBase">
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_gravity">top|center_horizontal</item>
+    </style>
+    
+    <style name="TextBlockWhite" parent="TextBlockBase">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    
+    <style name="TextBlockBlack" parent="TextBlockBase">
+        <item name="android:textColor">@color/black</item>
+    </style>
+    
+    <style name="Input">
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_gravity">center_vertical|center_horizontal</item>
+    </style>
+    
+    <style name="InputWithBox">
+        <item name="android:width">175dp</item>
+        <item name="android:layout_gravity">center_vertical|center_horizontal</item>
+    </style>
+    
+    <style name="ButtonBase">
+        <item name="android:layout_margin">10dp</item>
+    </style>
+    
+    <style name="ButtonCenter" parent="ButtonBase">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/bg_btn</item>
+        <item name="android:layout_gravity">center_vertical|center_horizontal</item>
+    </style>
+    
+    <style name="Divider">
+        <item name="android:background">@drawable/divider</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_gravity">center_vertical|center_horizontal</item>
+        <item name="android:contentDescription">@string/description_divider</item>
+    </style>
+    
+    <style name="ButtonActionBar">
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+    
+    <style name="TextBlockForgotPasswordActivity" parent="TextBlockBlack">
+        <item name="android:gravity">center</item>
+    </style>
+    
+    <style name="TextBlockRegisterActivity" parent="TextBlockBlack">
+        <item name="android:gravity">center</item>
+    </style>
+    
+    <style name="Label">
+        <item name="android:width">90dp</item>
+        <item name="android:height">44dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_vertical|left</item>
+        <item name="android:paddingLeft">10dp</item>
+    </style>
+    
+    
+    
 
 </resources>
